section list item are now svgs

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,6 +10,7 @@ $cb-red: #ff6666;
 @import "./components/course-card.scss";
 @import "./components/nagarro-banner.scss";
 @import "./components/textarea.scss";
+@import "./components/player.scss";
 @import "lists.scss";
 
 body {
