--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -221,3 +221,11 @@ body {
 .icon-hover-fill:hover {
   font-weight: 900;
 }
+
+.tracks-logo {
+  max-height: 100px;
+  max-width: 100px;
+  border-radius: 50px;
+  border: 1.5px solid #fff;
+  position: relative;
+}
