--- a/lib/ember-w-pack/addon/templates/components/w-tab-nav.hbs
+++ b/lib/ember-w-pack/addon/templates/components/w-tab-nav.hbs
@@ -1,4 +1,4 @@
-<div class="tab-nav-underline w-100 justify-content-start">
+<div class="tab-nav-underline w-100 justify-content-start {{tabClass}} ">
   {{#each @tabs as |tab index|}}
     <div class="tab px-0 mr-5 font-sm bold {{if (eq tab activeTab) 'active' inactiveClass}}" {{on "click" (action @onTabChange tab)}}>{{tab.name}}</div>
   {{/each}}
