--- a/lib/ember-w-pack/addon/templates/components/w-async.hbs
+++ b/lib/ember-w-pack/addon/templates/components/w-async.hbs
@@ -1,5 +1,9 @@
 {{#if task.isRunning}}
-  Loading ...
+  {{#if loaderComponent}}
+    {{loaderComponent}}
+  {{else}}
+    Loading...
+  {{/if}}
 {{else}}
   {{yield task.last.value}}
 {{/if}}
