fix hard coded reviews

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -254,5 +254,10 @@ body {
   height: 25px;
 }
 
+.review-body {
+  height: 80px;
+  overflow: hidden;
+}
+
 
 @import "ember-content-placeholders";
