valentine's day is coming

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,6 +13,7 @@ $cb-red: #ff6666;
 @import "./components/player.scss";
 @import "./components/loader.scss";
 @import "./components/button.scss";
+@import "./components/spin.scss";
 @import "lists.scss";
 
 body {
