add copy feature

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -288,13 +288,19 @@ body {
   color: whitesmoke;
   background-color: whitesmoke;
   transition: all 0.1s;
-  cursor: grab;
-  
 
   &:hover {
     color: black;
     background-color: white;
   }
+
+  &:active:hover {
+    cursor: grabbing;
+  }
+}
+
+.copy-text {
+  cursor: grab;
 
   &:active:hover {
     cursor: grabbing;
