--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -308,8 +308,8 @@ body {
 }
 
 .new-tag{
-  padding: 2px;
-  font-family: Gilroy-Medium;
+  padding: 2.5px;
+  font-family: Gilroy;
   font-size: 8px;
   line-height: 10px;
   color: #FFFFFF;
