cut: lame loader; add: top progress bar indicator
bleh

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,6 +18,7 @@ $cb-red: #ff6666;
 @import "./components/searchbox.scss";
 @import "./components/svg.scss";
 @import "./components/code-challenge.scss";
+@import "./components/progress-bar.scss";
 @import "lists.scss";
 
 body {
