--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -376,3 +376,22 @@ button:disabled{
 .hoverable-underline:hover {
   text-decoration: underline;
 }
+
+.drag-activated {
+  border: 2px dashed #e8e8e8;
+  position: relative;
+  
+  &:after {
+    content: '+';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left:0;
+    text-align: center;
+    font-size: 8rem;
+    padding-top: 8%;
+    background-color: rgba(0,0,0,0.2);
+  }
+}
