--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -21,6 +21,7 @@ $cb-red: #ff6666;
 @import "./components/progress-bar.scss";
 @import "lists.scss";
 @import "./components/chitkara-banner.scss";
+@import "./components//radio-button.scss";
 
 body {
   padding-top: 70px;
