--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,6 +22,7 @@ $cb-red: #ff6666;
 @import "lists.scss";
 @import "./components/chitkara-banner.scss";
 @import "./components//radio-button.scss";
+@import "./components/content-feedback.scss";
 
 body {
   padding-top: 70px;
